<resources>
    <string name="app_label" translatable="false">Phase</string>
    <string name="app_label_root" translatable="false">Phase (Root)</string>
    <string name="test_device_ip">171.247.39.92</string>
    <string name="scut_deleted_pc">PC deleted</string>
    <string name="scut_not_paired">PC not paired</string>
    <string name="scut_pc_not_found">PC not found</string>
    <string name="scut_invalid_uuid">Provided PC is not valid</string>
    <string name="scut_invalid_app_id">Provided App is not valid</string>
    <string name="help_loading_title">Help Viewer</string>
    <string name="help_loading_msg">Loading help page…</string>
    <string name="pcview_menu_header_online">Online</string>
    <string name="pcview_menu_header_offline">Offline</string>
    <string name="pcview_menu_header_unknown">Refreshing</string>
    <string name="pcview_menu_app_list">View All Apps</string>
    <string name="pcview_menu_pair_pc">Pair with PC</string>
    <string name="pcview_menu_unpair_pc">Unpair</string>
    <string name="pcview_menu_send_wol">Send Wake-On-LAN request</string>
    <string name="pcview_menu_delete_pc">Delete PC</string>
    <string name="pcview_menu_test_network">Test Network Connection</string>
    <string name="pcview_menu_details">View Details</string>
    <string name="nettest_title_waiting">Testing Network Connection</string>
    <string name="nettest_text_waiting">Phase is testing your network connection to determine if NVIDIA GameStream is blocked.\n\nThis may take a few seconds…</string>
    <string name="nettest_title_done">Network Test Complete</string>
    <string name="nettest_text_success">Your network does not appear to be blocking Phase. If you still have trouble connecting, check your PC\'s firewall settings.\n\nIf you are trying to stream over the Internet, install the Phase Internet Hosting Tool on your PC and run the included Internet Streaming Tester to check your PC\'s Internet connection.</string>
    <string name="nettest_text_inconclusive">The network test could not be performed because none of Phase\'s connection testing servers were reachable. Check your Internet connection or try again later.</string>
    <string name="nettest_text_failure">Your device\'s current network connection seems to be blocking Phase. Streaming over the Internet may not work while connected to this network.\n\nThe following network ports were blocked:\n</string>
    <string name="nettest_text_blocked">Your device\'s current network connection is blocking Phase. Streaming over the Internet may not work while connected to this network.</string>
    <string name="pairing">Pairing…</string>
    <string name="pair_pc_offline">Computer is offline</string>
    <string name="pair_pc_ingame">Computer is currently in a game. You must close the game before pairing.</string>
    <string name="pair_pairing_title">Pairing</string>
    <string name="pair_pairing_msg">Please enter the following PIN on the target PC:</string>
    <string name="pair_incorrect_pin">Incorrect PIN</string>
    <string name="pair_fail">Pairing failed</string>
    <string name="pair_already_in_progress">Pairing already in progress</string>
    <string name="wol_pc_online">Computer is online</string>
    <string name="wol_no_mac">Unable to wake PC because GFE didn\'t send a MAC address</string>
    <string name="wol_waking_pc">Waking PC…</string>
    <string name="wol_waking_msg">It may take a few seconds for your PC to wake up.
	    If it doesn\'t, make sure it\'s configured properly for Wake-On-LAN.
    </string>
    <string name="wol_fail">Failed to send Wake-On-LAN packets</string>
    <string name="unpairing">Unpairing…</string>
    <string name="unpair_success">Unpaired successfully</string>
    <string name="unpair_fail">Failed to unpair</string>
    <string name="unpair_error">Device was not paired</string>
    <string name="error_pc_offline">Computer is offline</string>
    <string name="error_manager_not_running">The ComputerManager service is not running. Please wait a few seconds or restart the app.</string>
    <string name="error_unknown_host">Failed to resolve host</string>
    <string name="error_404">GFE returned an HTTP 404 error. Make sure your PC is running a supported GPU.
	    Using remote desktop software can also cause this error. Try rebooting your machine or reinstalling GFE.
    </string>
    <string name="title_decoding_error">Video Decoder Crashed</string>
    <string name="message_decoding_error">Phase has crashed due to an incompatibility with this device\'s video decoder. Ensure GeForce Experience is updated to the latest version on your PC. Try adjusting the streaming settings if the crashes continue.</string>
    <string name="title_decoding_reset">Video Settings Reset</string>
    <string name="message_decoding_reset">Your device\'s video decoder continues to crash at your selected streaming settings. Your streaming settings have been reset to default.</string>
    <string name="error_usb_prohibited">USB access is prohibited by your device administrator. Check your Knox or MDM settings.</string>
    <string name="unable_to_pin_shortcut">Your current launcher does not allow for creating pinned shortcuts.</string>
    <string name="video_decoder_init_failed">Video decoder failed to initialize. Your device may not support the selected resolution or frame rate.</string>
    <string name="no_video_received_error">No video received from host.</string>
    <string name="no_frame_received_error">Your network connection isn\'t performing well. Reduce your video bitrate setting or try a faster connection.</string>
    <string name="early_termination_error">Something went wrong on your host PC when starting the stream.\n\nMake sure you don\'t have any DRM-protected content open on your host PC. You can also try restarting your host PC.\n\nIf the issue persists, try reinstalling your GPU drivers and GeForce Experience.</string>
    <string name="check_ports_msg">Check your firewall and port forwarding rules for port(s):</string>
    <string name="conn_establishing_title">Establishing connection</string>
    <string name="conn_establishing_msg">Starting connection</string>
    <string name="conn_metered">Warning: Your active network connection is metered!</string>
    <string name="conn_client_latency">Average frame decoding latency:</string>
    <string name="conn_client_latency_hw">hardware decoder latency:</string>
    <string name="conn_hardware_latency">Average hardware decoding latency:</string>
    <string name="conn_starting">Starting</string>
    <string name="conn_error_title">Connection Error</string>
    <string name="conn_error_msg">Failed to start</string>
    <string name="conn_terminated_title">Connection Terminated</string>
    <string name="conn_terminated_msg">The connection was terminated</string>
    <string name="ip_hint">IP address of GeForce PC</string>
    <string name="searching_pc">Searching for PCs with GameStream running…\n\n
        Ensure GameStream is enabled in the GeForce Experience SHIELD settings.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lost_connection">Lost connection to PC</string>
    <string name="title_details">Details</string>
    <string name="help">Help</string>
    <string name="delete_pc_msg">Are you sure you want to delete this PC?</string>
    <string name="slow_connection_msg">Slow connection to PC\nReduce your bitrate</string>
    <string name="poor_connection_msg">Poor connection to PC</string>
    <string name="perf_overlay_text">Video dimensions: %1$s\nDecoder: %2$s\nEstimated host PC frame rate: %3$.2f FPS\nIncoming frame rate from network: %4$.2f FPS\nRendering frame rate: %5$.2f FPS\nFrames dropped by your network connection: %6$.2f%%\nAverage receive time: %7$.2f ms\nAverage decoding time: %8$.2f ms</string>
    <string name="applist_connect_msg">Connecting to PC…</string>
    <string name="applist_menu_resume">Resume Session</string>
    <string name="applist_menu_quit">Quit Session</string>
    <string name="applist_menu_quit_and_start">Quit Current Game and Start</string>
    <string name="applist_menu_cancel">Cancel</string>
    <string name="applist_menu_details">View Details</string>
    <string name="applist_menu_scut">Create Shortcut</string>
    <string name="applist_menu_tv_channel">Add to Channel</string>
    <string name="applist_menu_hide_app">Hide App</string>
    <string name="applist_refresh_title">App List</string>
    <string name="applist_refresh_msg">Refreshing apps…</string>
    <string name="applist_refresh_error_title">Error</string>
    <string name="applist_refresh_error_msg">Failed to get app list</string>
    <string name="applist_quit_app">Quitting</string>
    <string name="applist_quit_success">Successfully quit</string>
    <string name="applist_quit_fail">Failed to quit</string>
    <string name="applist_quit_confirmation">Are you sure you want to quit the running app? All unsaved data will be lost.</string>
    <string name="applist_details_id">App ID:</string>
    <string name="title_add_pc">Add PC Manually</string>
    <string name="msg_add_pc">Connecting to the PC…</string>
    <string name="addpc_fail">Unable to connect to the specified computer. Make sure the required ports are allowed through the firewall.</string>
    <string name="addpc_success">Successfully added computer</string>
    <string name="addpc_unknown_host">Unable to resolve PC address. Make sure you didn\'t make a typo in the address.</string>
    <string name="addpc_enter_ip">You must enter an IP address</string>
    <string name="addpc_wrong_sitelocal">That address doesn\'t look right. You must use your router\'s public IP address for streaming over the Internet.</string>
    <string name="category_basic_settings">Basic Settings</string>
    <string name="title_resolution_list">Video resolution</string>
    <string name="summary_resolution_list">Increase to improve image clarity. Decrease for better performance on lower end devices and slower networks.</string>
    <string name="title_native_res_dialog">Native Resolution Warning</string>
    <string name="text_native_res_dialog">Native resolution modes are not officially supported by GeForce Experience, so it will not set your host display resolution itself. You will need to set it manually while in game.\n\nIf you choose to create a custom resolution in NVIDIA Control Panel to match your device resolution, please ensure you have read and understood NVIDIA\'s warning regarding possible monitor damage, PC instability, and other potential problems.\n\nWe are not responsible for any problems resulting from creating a custom resolution on your PC.\n\nFinally, your device or host PC may not support streaming at native resolution. If it doesn\'t work on your device, you\'re just out of luck unfortunately.</string>
    <string name="title_fps_list">Video frame rate</string>
    <string name="view_all_txt">View all</string>
    <string name="sign_in_text">Sign in</string>
    <string name="sign_up_text">Sign up</string>
    <string name="already_had_account">Already had an account ?</string>
    <string name="password_txt">Password</string>
    <string name="confirm_password_txt">Confirm password</string>
    <string name="create_account_title">Create \nyour account</string>
    <string name="sort_by_title">Sort by</string>
    <string name="tag_title">Tag</string>
    <string name="pay_type_title">Pay types</string>
    <string name="platform_title">Platform</string>
    <string name="play_type_title">Play types</string>
    <string name="pegi_age_title">PEGI</string>
    <string name="by_feature_title">By feature</string>
    <string name="nop_title">Number of players</string>
    <string name="game_quality_title">Game quality</string>
    <string name="deposit">Deposit</string>
    <string name="wallet_balance_txt">Wallet Balance</string>
    <string name="activity_title">Activity</string>
</resources>